src/test/deca/syntax/parser/valid/test/test_pars_val_instruction_if_dans_if.deca
// Description:
//    Programme minimaliste testant l'arbre d'instruction pour un literal.
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023


{
    if (1 == 1){
        if(2 == 2){
            println("Hello");
        }
    }
}