src/test/deca/syntax/parser/invalid/test/pars_inv_if_else_sans_if.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le if
//
// Resultats:
//    Ligne 12 : Erreur (else sans if précédent)
//    
//
// Historique:
//    cree le 04/01/2023

{
    x = 0;
    else {
        println("Hello");
        x = x+ 1;
    }
    
}
